@@ -47,7 +47,7 @@ import org.gjt.sp.util.Log;
 /**
  * The main class of the jEdit text editor.
  * @author Slava Pestov
- * @version $Id: jEdit.java,v 1.222 2004/03/28 01:42:45 spestov Exp $
+ * @version $Id: jEdit.java,v 1.223 2004/04/08 22:35:27 spestov Exp $
  */
 public class jEdit
 {
@@ -1423,6 +1423,8 @@ public class jEdit
 
 		path = MiscUtilities.constructPath(parent,path);
 
+		Buffer newBuffer;
+
 		synchronized(bufferListLock)
 		{
 			Buffer buffer = getBuffer(path);
@@ -1456,20 +1458,20 @@ public class jEdit
 					props.put(Buffer.ENCODING,entry.encoding);
 			}
 
-			Buffer newBuffer = new Buffer(path,newFile,false,props);
+			newBuffer = new Buffer(path,newFile,false,props);
 
 			if(!newBuffer.load(view,false))
 				return null;
 
 			addBufferToList(newBuffer);
-
-			EditBus.send(new BufferUpdate(newBuffer,view,BufferUpdate.CREATED));
-
-			if(view != null)
-				view.setBuffer(newBuffer);
-
-			return newBuffer;
 		}
+
+		EditBus.send(new BufferUpdate(newBuffer,view,BufferUpdate.CREATED));
+
+		if(view != null)
+			view.setBuffer(newBuffer);
+
+		return newBuffer;
 	} //}}}
 
 	//{{{ openTemporary() method
